@@ -1,4 +1,9 @@
 
+2018-04-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* screenio.c (cob_screen_init): fix definition of alt keys
+	  when function keys have negative values
+
 2018-04-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* screenio.c (cob_screen_init): escape backslash in key definitions
